force-app/main/default/objects/Control__c/Control__c.object-meta.xml
<CustomObject>
    <label>Control</label>
    <nameField>
        <label>Control Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>