force-app/main/default/objects/Control__c/fields/Clause__c.field-meta.xml
<CustomField>
    <fullName>Clause__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clause/Control Domain</label>
    <referenceTo>Clause__c</referenceTo>
    <relationshipLabel>Controls</relationshipLabel>
    <relationshipName>Controls</relationshipName>
    <type>Lookup</type>
</CustomField>