force-app/main/default/objects/Control__c/fields/Control_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Control_Unique_Id__c</fullName>
    <externalId>true</externalId>
    <label>Control Unique Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>